methods.picture.MethodsPictureLarge.scala.error
Erreur de compilation :
MethodsPictureLarge:6: error: value faireMotif is not a member of Unit
def rangee(){for (i<-1 to 7) { faireMotif();avance();avance();avance();avance();avance();} faireMotif() }
                                                                                           ^