methods.picture.MethodsPictureLarge.scala.code
override def run() { def faireV(c:Color) 
             {setCouleurBrosse(c);avance();baisseBrosse();leveBrosse();avance();gauche();avance();baisseBrosse();leveBrosse();recule();droite();avance();baisseBrosse();leveBrosse();avance();gauche()}

def faireMotif() {faireV(Color.YELLOW);faireV(Color.RED);faireV(Color.BLUE);faireV(Color.GREEN) }
                    
def rangee(){for (i<-1 to 7) { faireMotif();avance();avance();avance();avance();avance();} faireMotif() }
                    
def remiseEnPlace(){for (i<-1 to 40) {recule()}
                   gauche();avance();avance();avance();avance();avance();droite()}
                   
                    for (i<-1 to 9) {rangee();remiseEnPlace()}
}